--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>NXA Hello World</title>
   </head>
   <body>
-    <div id="main"></div>
+    <h1 id="heading"></h1>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
